--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,8 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "argon2": "^0.31.1",
+    "cookie-parser": "^1.4.6",
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
     "passport-jwt": "^4.0.1",
