--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "p5": "^1.7.0",
     "pizzicato": "^0.6.4",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
